updated logo and fixed minor spacing issues in css

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,147 +1,152 @@
 * {
-    box-sizing: border-box;
-    padding-left: 0.2cm;
-    padding-right: 0.2cm;
+  box-sizing: border-box;
+  padding-left: 0.2cm;
+  padding-right: 0.2cm;
    
 }
 
 /* Style the navigation bar */
 .tab {
-    overflow: hidden;
-    border-bottom: 7px solid black;
+  overflow: hidden;
+  border-bottom: 7px solid black;
 }
   
 /* Style the buttons that are used to open the tab content */
 .tab button {
-    background-color: inherit;
-    font-size: 130%;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
+  background-color: inherit;
+  font-size: 130%;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
 }
   
 /* Change background color of buttons on hover */
 .tab button:hover {
-    text-decoration: underline gray;
+  text-decoration: underline gray;
 }
   
 /* Create an active/current tablink class */
 .tab button.active {
-    text-decoration: underline red;
+  text-decoration: underline red;
 }
   
 /* Style the tab content */
 .tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
 }
 
 .center {
   padding-top: 25px;
-    text-align: center;
+  text-align: center;
 }
 
 #logo {
-    max-width: 50%;
-    display: inline-block;
-    border: 1px solid rgb(197, 110, 110);
+  max-width: 50%;
+  display: inline-block;
+  border: 1px solid rgb(197, 110, 110);
 }
 
 .pageContent {
-  
-    padding-left: 50px;
-    padding-right: 50px;
-    font-family: Arial, Helvetica, sans-serif;
+  padding-left: 50px;
+  padding-right: 50px;
+  font-family: Arial, Helvetica, sans-serif;
 }
-.hometitle{ 
+.hometitle { 
   font-size: 40pt;
   font-family: fantasy, serif;
-  -webkit-text-fill-color: rgb(231, 141, 141);
+  -webkit-text-fill-color: rgb(17, 154, 255);
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color:rgb(66, 62, 62);
+  padding-left: 150;
+  padding-right: 150;
 
 }
-.welcome{
- margin-left: 250px;
- margin-right: 250px;
+.welcome {
+  padding-left: 200px;
+  padding-right: 200px;
 }
-.row{
+.row {
   padding-left: 100px;
   padding-right:100px
 }
-.rooms{
+.rooms {
   margin-left: 3px;
-    text-align: center;
-  }
+  text-align: center;
+}
 
 /*Info in Play tab*/
 .playdetails {
-    padding-left: 50px;
-    padding-right: 50px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
+  padding-left: 50px;
+  padding-right: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
 
 /*button styling*/
-.btn{
-    border: 1px solid #f7300d;
-    background: none;
-    padding: 10px 20px;
-    font-size: 20px;
-    font-family: "montserrat";
-    cursor: pointer;
-    margin: 130px;
-    transition: 0.8s;
-    position: relative;
-    overflow: hidden;
-  }
-.btn1,.btn2,.btn3,.btn4{
-    color: #000305;
-  }
-.btn1:hover,.btn2:hover,.btn3:hover,.btn4:hover{
-    color: #fff;
-  }
-.btn::before{
-    content: "";
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 0%;
-    background: #fa2408;
-    z-index: -1;
-    transition: 0.8s;
-  }
-.btn1::before,.btn3::before,.btn2::before,.btn4::before{
-    top: 0;
-    border-radius: 0 0 50% 50%;
-  }
+.btn {
+  border: 1px solid #f7300d;
+  background: none;
+  padding: 10px 20px;
+  font-size: 20px;
+  font-family: "montserrat";
+  cursor: pointer;
+  margin: 130px;
+  transition: 0.8s;
+  position: relative;
+  overflow: hidden;
+}
+
+.btn1,.btn2,.btn3,.btn4 {
+  color: #000305;
+}
+
+.btn1:hover,.btn2:hover,.btn3:hover,.btn4:hover {
+  color: #fff;
+}
+
+.btn::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  background: #fa2408;
+  z-index: -1;
+  transition: 0.8s;
+}
+.btn1::before,.btn3::before,.btn2::before,.btn4::before {
+  top: 0;
+  border-radius: 0 0 50% 50%;
+}
   
-.btn1:hover::before,.btn2:hover::before,.btn3:hover::before,.btn4:hover::before{
-    height: 180%;
-  }
+.btn1:hover::before,.btn2:hover::before,.btn3:hover::before,.btn4:hover::before {
+  height: 180%;
+}
 
 /*Images in play tab styling*/
 .column {
-    float: left;
-    width: 25%;
-  }
+  float: left;
+  width: 25%;
+}
+
 .row::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
+  content: "";
+  clear: both;
+  display: table;
+}
 
 /*PLAY*/
-.answer_button{
-background-color: rgb(231, 141, 141);
+.answer_button {
+  background-color: rgb(231, 141, 141);
 }
-.result_out{
+
+.result_out {
   font-size: 30;
   color:  gray;
-
 }
